--- a/index.html
+++ b/index.html
@@ -1,218 +1,331 @@
 <!DOCTYPE html>
 <html lang="ru">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/normalize.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<title>Туристический городок Sedona</title>
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Туристический городок Sedona</title>
-</head>
+	<body>
+		<h1 class="visually-hidden">Сайт туристического городка Sedona</h1>
 
-<body>
+		<div class="main-container">
+			<header class="header">
+				<h2 class="visually-hidden">Шапка сайта</h2>
+				<div class="inner-container">
+					<nav class="main-navigation">
+						<ul class="navigation-list">
+							<li class="list-item-left">
+								<a class="navigation-active">Главная</a>
+							</li>
+							<li class="list-item-left">
+								<a href="hotels.html">Гостиницы</a>
+							</li>
+							<li class="navigation-logo"></li>
+							<li class="list-item-right"><a href="#">Информация</a></li>
+							<li class="list-item-right">
+								<a class="link" href="https://htmlacademy.ru/intensive/htmlcss"
+									>HTML Academy</a
+								>
+							</li>
+						</ul>
+					</nav>
+				</div>
+			</header>
 
-  <h1 class="visually-hidden">Сайт туристического городка Sedona</h1>
+			<main class="main">
+				<section class="main-logo">
+					<h2 class="visually-hidden">Логотип-приветствие посетителя</h2>
+					<img
+						src="img/icon/welcome.png"
+						alt="Изображение, на котором написано: 'Welcome to the gorgeous Sedona. «Because the Grand Canyon sucks!»'"
+					/>
+					<div class="decorative-arrows-wrapper">
+						<img
+							class="decorative-arrows"
+							src="svg/arrows.svg"
+							alt="Декоративные стрелочки"
+						/>
+					</div>
+				</section>
 
-  <div class="main-container">
+				<section class="main-features">
+					<h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
+					<p class="main-features-title">
+						Седона ‒ небольшой городок в Аризоне, <br />
+						заслуживающий большего!
+					</p>
+					<p class="main-features-text">
+						Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
+					</p>
 
-    <header class="header">
-      <h2 class="visually-hidden">Шапка сайта</h2>
-      <div class="inner-container">
-        <nav class="main-navigation">
-          <ul class="navigation-list">
-            <li class="list-item-left"><a class="navigation-active">Главная</a></li>
-            <li class="list-item-left"><a href="hotels.html">Гостиницы</a></li>
-            <li class="navigation-logo"></li>
-            <li class="list-item-right"><a href="#">Информация</a></li>
-            <li class="list-item-right"><a href="#">Фото и видео</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+					<div class="feature">
+						<h3 class="visually-hidden">Преимущество №1</h3>
+						<div class="feature-card">
+							<div class="card-title">Настоящий<br />городок</div>
+							<div class="card-num">№1</div>
+							<div class="card-text">
+								Седона ‒ не аттракцион для туристов,<br />там течёт своя жизнь
+							</div>
+						</div>
+						<div class="feature-img">
+							<img
+								src="img/main/photo-2.jpg"
+								alt="Фото кафе на территории Седоны"
+							/>
+						</div>
+					</div>
 
-    <main class="main">
+					<div class="features-block">
+						<div class="feature-card">
+							<img
+								class="card-icon"
+								height="80"
+								width="80"
+								src="svg/living.svg"
+								alt="Иконка в виде домика"
+							/>
+							<p class="card-title">Жильё</p>
+							<p class="card-text">
+								Рекомендуем пожить в настоящем мотеле, всё как в кино!
+							</p>
+						</div>
+						<div class="feature-card">
+							<img
+								class="card-icon"
+								height="80"
+								width="80"
+								src="svg/burger.svg"
+								alt="Иконка в виде бургера"
+							/>
+							<p class="card-title">Еда</p>
+							<p class="card-text">
+								Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+							</p>
+						</div>
+						<div class="feature-card">
+							<img
+								class="card-icon"
+								height="80"
+								width="80"
+								src="svg/gift.svg"
+								alt="Иконка в виде подарочной коробки"
+							/>
+							<p class="card-title">Сувениры</p>
+							<p class="card-text">
+								Не только китайского, но и местного производства!
+							</p>
+						</div>
+					</div>
 
-      <section class="main-logo">
-        <h2 class="visually-hidden">Логотип-приветствие посетителя</h2>
-        <img src="img/icon/welcome.png"
-          alt="Изображение, на котором написано: 'Welcome to the gorgeous Sedona. «Because the Grand Canyon sucks!»'">
-        <div class="decorative-arrows-wrapper">
-          <img class="decorative-arrows" src="svg/arrows.svg" alt="Декоративные стрелочки">
-        </div>
-      </section>
+					<div class="feature">
+						<h3 class="visually-hidden">Преимущество №2</h3>
+						<div class="feature-img">
+							<img src="img/main/photo-1.jpg" alt="Фото Моста дьявола" />
+						</div>
+						<div class="feature-card">
+							<p class="card-title">Там есть<br />мост дьявола</p>
+							<p class="card-num">№2</p>
+							<p class="card-text">
+								Да, по нему можно пройти! Если конечно вы осмелитесь
+							</p>
+						</div>
+					</div>
 
-      <section class="main-features">
-        <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
-        <p class="main-features-title">Седона ‒ небольшой городок в Аризоне, <br> заслуживающий большего!</p>
-        <p class="main-features-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+					<div class="features-block">
+						<div class="feature-card">
+							<h3 class="visually-hidden">Преимущество №3</h3>
+							<p class="card-title">Небольшая<br />площадь</p>
+							<p class="card-num">№3</p>
+							<p class="card-text">
+								Все достопримечательности находятся очень близко
+							</p>
+						</div>
+						<div class="feature-card">
+							<h3 class="visually-hidden">Преимущество №4</h3>
+							<p class="card-title">Красивая<br />дорога</p>
+							<p class="card-num">№4</p>
+							<p class="card-text">
+								Ехать в Седону из Лас-Вегаса совсем не скучно!
+							</p>
+						</div>
+						<div class="feature-card">
+							<h3 class="visually-hidden">Преимущество №5</h3>
+							<p class="card-title">Мало<br />туристов</p>
+							<p class="card-num">№5</p>
+							<p class="card-text">
+								Большинство едет в Гранд Каньон и толпится там
+							</p>
+						</div>
+					</div>
+				</section>
 
-        <div class="feature">
-          <h3 class="visually-hidden">Преимущество №1</h3>
-          <div class="feature-card">
-            <div class="card-title">Настоящий<br>городок</div>
-            <div class="card-num">№1</div>
-            <div class="card-text">Седона ‒ не аттракцион для туристов,<br>там течёт своя жизнь</div>
-          </div>
-          <div class="feature-img">
-            <img src="img/main/photo-2.jpg" alt="Фото кафе на территории Седоны">
-          </div>
-        </div>
+				<section class="main-hotels">
+					<h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
 
-        <div class="features-block">
-          <div class="feature-card">
-            <img class="card-icon" height="80" width="80" src="svg/living.svg" alt="Иконка в виде домика">
-            <p class="card-title">Жильё</p>
-            <p class="card-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </div>
-          <div class="feature-card">
-            <img class="card-icon" height="80" width="80" src="svg/burger.svg" alt="Иконка в виде бургера">
-            <p class="card-title">Еда</p>
-            <p class="card-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-          </div>
-          <div class="feature-card">
-            <img class="card-icon" height="80" width="80" src="svg/gift.svg" alt="Иконка в виде подарочной коробки">
-            <p class="card-title">Сувениры</p>
-            <p class="card-text">Не только китайского, но и местного производства!</p>
-          </div>
-        </div>
+					<p class="hotels-title">Заинтересовались?</p>
 
-        <div class="feature">
-          <h3 class="visually-hidden">Преимущество №2</h3>
-          <div class="feature-img">
-            <img src="img/main/photo-1.jpg" alt="Фото Моста дьявола">
-          </div>
-          <div class="feature-card">
-            <p class="card-title">Там есть<br>мост дьявола</p>
-            <p class="card-num">№2</p>
-            <p class="card-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-          </div>
-        </div>
+					<p class="hotels-subtitle">
+						Укажите предполагаемые даты поездки, <br />
+						и мы покажем вам лучшие предложения гостиниц в Седоне
+					</p>
 
-        <div class="features-block">
-          <div class="feature-card">
-            <h3 class="visually-hidden">Преимущество №3</h3>
-            <p class="card-title">Небольшая<br>площадь</p>
-            <p class="card-num">№3</p>
-            <p class="card-text">Все достопримечательности находятся очень близко</p>
-          </div>
-          <div class="feature-card">
-            <h3 class="visually-hidden">Преимущество №4</h3>
-            <p class="card-title">Красивая<br>дорога</p>
-            <p class="card-num">№4</p>
-            <p class="card-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </div>
-          <div class="feature-card">
-            <h3 class="visually-hidden">Преимущество №5</h3>
-            <p class="card-title">Мало<br>туристов</p>
-            <p class="card-num">№5</p>
-            <p class="card-text">Большинство едет в Гранд Каньон и толпится там</p>
-          </div>
-        </div>
+					<button class="index-btn" type="button">
+						Поиск гостиницы в Седоне
+					</button>
+				</section>
 
-      </section>
+				<section class="main-map">
+					<h2 class="visually-hidden">Карта</h2>
 
-      <section class="main-hotels">
+					<div class="index-form-wrapper">
+						<form
+							class="index-form"
+							style="display: block; opacity: 1"
+							action="https://echo.htmlacademy.ru"
+							method="POST"
+						>
+							<div class="index-form-line">
+								<label class="index-line-label" for="start-date">
+									Дата заезда:
+								</label>
+								<input
+									class="index-line-input"
+									type="date"
+									id="start-date"
+									name="start-date"
+									value="2020-06-10"
+									required
+								/>
+							</div>
+							<div class="index-form-line">
+								<label class="index-line-label" for="end-date">
+									Дата выезда:
+								</label>
+								<input
+									class="index-line-input"
+									type="date"
+									id="end-date"
+									name="end-date"
+									value="2020-06-18"
+									required
+								/>
+							</div>
+							<div class="index-form-line">
+								<div class="index-line-div">
+									<label class="index-line-label" for="adults-count">
+										Взрослые:
+									</label>
+									<input
+										class="index-line-input"
+										type="number"
+										id="adults-count"
+										name="adults"
+										value="2"
+										min="1"
+										max="100"
+										required
+									/>
+								</div>
+								<div class="index-line-div">
+									<label class="index-line-label" for="children-count">
+										Дети:
+									</label>
+									<input
+										class="index-line-input"
+										type="number"
+										id="children-count"
+										name="children"
+										value="1"
+										min="1"
+										max="100"
+									/>
+								</div>
+							</div>
+							<button class="index-submit-btn" type="submit">Найти</button>
+						</form>
+					</div>
+				</section>
+			</main>
 
-        <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+			<footer class="footer">
+				<div class="footer-contacts">
+					<p class="contacts-text">#VISITSEDONA</p>
+					<a class="contacts-tel" href="tel:+7(495)495-49-54"
+						>TEL: +7(495)495-49-54</a
+					>
+				</div>
 
-        <p class="hotels-title">Заинтересовались?</p>
+				<div class="footer-socials">
+					<a href="#">
+						<div class="social-link">
+							<svg
+								height="25"
+								width="25"
+								xmlns="http://www.w3.org/2000/svg"
+								viewBox="0 0 512 512"
+								aria-label="Иконка Твиттер"
+							>
+								<defs />
+								<path
+									class="path-background"
+									d="M512 97c-19 9-39 14-60 17 21-13 38-34 46-58-21 12-43 20-67 25a105 105 0 00-179 96c-87-4-164-46-216-110a106 106 0 0032 140c-17 0-34-5-48-13v2c0 51 37 93 85 103a105 105 0 01-48 1c14 42 52 73 98 74A211 211 0 010 417c46 30 102 47 161 47a297 297 0 00298-312c21-15 39-34 53-55z"
+								/>
+							</svg>
+						</div>
+					</a>
+					<a href="#">
+						<div class="social-link">
+							<svg
+								height="25"
+								width="25"
+								xmlns="http://www.w3.org/2000/svg"
+								viewBox="0 0 512 512"
+								aria-label="Иконка Facebook"
+							>
+								<defs />
+								<path
+									class="path-background"
+									d="M320 85h64c6 0 11-4 11-10V11c0-6-5-11-11-11h-64c-65 0-117 53-117 117v75h-75c-6 0-11 5-11 11v64c0 6 5 10 11 10h75v224c0 6 4 11 10 11h64c6 0 11-5 11-11V277h75c4 0 8-3 10-7l21-64a11 11 0 00-10-14h-96v-75c0-17 14-32 32-32z"
+								/>
+							</svg>
+						</div>
+					</a>
+					<a href="#">
+						<div class="social-link">
+							<svg
+								height="25"
+								width="25"
+								xmlns="http://www.w3.org/2000/svg"
+								viewBox="0 0 68 48"
+								aria-label="Иконка YouTube"
+							>
+								<defs />
+								<path
+									class="path-background"
+									d="M66.5 7.7c-.8-2.9-2.5-5.4-5.4-6.2C55.8.1 34 0 34 0S12.2.1 6.9 1.6c-3 .7-4.6 3.2-5.4 6.1a89.6 89.6 0 000 32.5c.8 3 2.5 5.5 5.4 6.3C12.2 47.9 34 48 34 48s21.8-.1 27.1-1.6c3-.7 4.6-3.2 5.4-6.1C68 35 68 24 68 24s0-11-1.5-16.3z"
+								/>
+								<path class="path-hole" d="M45 24L27 14v20" />
+							</svg>
+						</div>
+					</a>
+				</div>
 
-        <p class="hotels-subtitle">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения
-          гостиниц в Седоне </p>
+				<div class="footer-author">
+					<a class="author-link" href="https://github.com/vaivankov">
+						<p class="author-text">Вёрстка:</p>
+						<br />
+						<p class="author-name">Виталий Иваньков</p>
+					</a>
+				</div>
+			</footer>
+		</div>
 
-        <button class="index-btn" type="button">Поиск гостиницы в Седоне</button>
-
-      </section>
-
-      <section class="main-map">
-
-      <h2 class="visually-hidden">Карта</h2>
-
-        <div class="index-form-wrapper">
-          <form class="index-form" style="display:block;opacity: 1;" action="https://echo.htmlacademy.ru" method="POST">
-            <div class="index-form-line">
-              <label class="index-line-label" for="start-date"> Дата заезда: </label>
-              <input class="index-line-input" type="date" id="start-date" name="start-date" value="2020-06-10" required>
-            </div>
-            <div class="index-form-line">
-              <label class="index-line-label" for="end-date"> Дата выезда: </label>
-              <input class="index-line-input" type="date" id="end-date" name="end-date" value="2020-06-18" required>
-            </div>
-            <div class="index-form-line">
-              <div class="index-line-div">
-                <label class="index-line-label" for="adults-count"> Взрослые: </label>
-                <input class="index-line-input" type="number" id="adults-count" name="adults" value="2" min="1"
-                  max="100" required>
-              </div>
-              <div class="index-line-div">
-                <label class="index-line-label" for="children-count"> Дети: </label>
-                <input class="index-line-input" type="number" id="children-count" name="children" value="1" min="1"
-                  max="100">
-              </div>
-            </div>
-            <button class="index-submit-btn" type="submit">Найти</button>
-          </form>
-        </div>
-
-      </section>
-
-    </main>
-
-    <footer class="footer">
-
-      <div class="footer-contacts">
-        <p class="contacts-text">#VISITSEDONA</p>
-        <a class="contacts-tel" href="tel:+7(495)495-49-54">TEL: +7(495)495-49-54</a>
-      </div>
-
-      <div class="footer-socials">
-        <a href="#">
-          <div class="social-link">
-            <svg height="25" width="25" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" aria-label="Иконка Твиттер">
-              <defs />
-              <path class="path-background"
-                d="M512 97c-19 9-39 14-60 17 21-13 38-34 46-58-21 12-43 20-67 25a105 105 0 00-179 96c-87-4-164-46-216-110a106 106 0 0032 140c-17 0-34-5-48-13v2c0 51 37 93 85 103a105 105 0 01-48 1c14 42 52 73 98 74A211 211 0 010 417c46 30 102 47 161 47a297 297 0 00298-312c21-15 39-34 53-55z" />
-            </svg>
-          </div>
-        </a>
-        <a href="#">
-          <div class="social-link">
-            <svg height="25" width="25" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" aria-label="Иконка Facebook">
-              <defs />
-              <path class="path-background"
-                d="M320 85h64c6 0 11-4 11-10V11c0-6-5-11-11-11h-64c-65 0-117 53-117 117v75h-75c-6 0-11 5-11 11v64c0 6 5 10 11 10h75v224c0 6 4 11 10 11h64c6 0 11-5 11-11V277h75c4 0 8-3 10-7l21-64a11 11 0 00-10-14h-96v-75c0-17 14-32 32-32z" />
-            </svg>
-          </div>
-        </a>
-        <a href="#">
-          <div class="social-link">
-            <svg height="25" width="25" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 68 48" aria-label="Иконка YouTube">
-              <defs />
-              <path class="path-background"
-                d="M66.5 7.7c-.8-2.9-2.5-5.4-5.4-6.2C55.8.1 34 0 34 0S12.2.1 6.9 1.6c-3 .7-4.6 3.2-5.4 6.1a89.6 89.6 0 000 32.5c.8 3 2.5 5.5 5.4 6.3C12.2 47.9 34 48 34 48s21.8-.1 27.1-1.6c3-.7 4.6-3.2 5.4-6.1C68 35 68 24 68 24s0-11-1.5-16.3z" />
-              <path class="path-hole" d="M45 24L27 14v20" />
-            </svg>
-          </div>
-        </a>
-      </div>
-
-      <div class="footer-author">
-        <a class="author-link" href="https://github.com/vaivankov">
-          <p class="author-text">Вёрстка:</p><br>
-          <p class="author-name">Виталий Иваньков</p>
-        </a>
-      </div>
-
-    </footer>
-
-  </div>
-
-  <!-- <script src="js/func__.js"></script> -->
-  <script src="js/variables.js"></script>
-  <script src="js/func__setTodaysDate.js"></script>
-  <script src="js/func__toggleModalWindow.js"></script>
-  <script src="js/handlers.js"></script>
-
-</body>
-
+		<script src="js/variables.js"></script>
+		<script src="js/func__setTodaysDate.js"></script>
+		<script src="js/func__toggleModalWindow.js"></script>
+		<script src="js/handlers.js"></script>
+	</body>
 </html>
